feat/ fixted conflict of codeblock by adding hidden editor

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -98,6 +98,8 @@
     CodeBlock Console
 ** =================== **/
 /*Structure*/
+
+
 .codeblock-console-run {
     float: right;
     padding: 0 10px;
@@ -184,3 +186,6 @@
 }
 /** END CONSOLE OUTPUT **/
 
+.ghost_editor {
+  display: none;
+}
