--- a/client/css/style.css
+++ b/client/css/style.css
@@ -256,10 +256,14 @@ li > a {
 .imgLeft {
     float: left;
     text-align: left;
+    margin-left: 10px;
+    margin-right: 5px;
 }
 .imgRight {
     float: right;
     text-align: left;
+    margin-right: 10px;
+    margin-left: 5px;
 }
 
 #chatcontainer {
@@ -320,6 +324,11 @@ li > a {
     padding: 0px;
 }
 
+#message {
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
 .chat {
     list-style: none;
     margin: 0;
@@ -344,13 +353,13 @@ ul {
 
 #chatcontainer .panel-footer {
     padding: 8px 6px;
-    border-top: 1px solid #66d9d7;
+    /*border-top: 1px solid #66d9d7;*/
 }
 
 .panel-footer {
     padding: 10px 15px;
     background-color: #272822;
-    border-top: 1px solid #ddd;
+    /*border-top: 1px solid #ddd;*/
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
 }
@@ -493,5 +502,5 @@ img {
 
 #button_chat > a:hover {
     background-color: #54b3b1;
-  
+
 }
