chores/ start setting up online notifications in chat and timestamps

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -26,6 +26,10 @@ li {
   box-sizing: border-box;
 }
 
+.main {
+  width: 100%;
+}
+
 /** =================== **
         Video Div
 ** =================== **/
