--- a/client/css/bootstrap.css
+++ b/client/css/bootstrap.css
@@ -4293,7 +4293,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   text-decoration: none;
 }
 .navbar-brand > img {
-  display: block;
+  display: inline-block;
+  padding-right: 5px;
 }
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand,
