chores/ move video button up to Nav. Video now renders on top right of code editor

--- a/client/css/bootstrap.css
+++ b/client/css/bootstrap.css
@@ -3652,6 +3652,10 @@ tbody.collapse.in {
     right: auto;
   }
 }
+.navbar-right{
+  z-index: 1005;
+}
+
 .btn-group,
 .btn-group-vertical {
   position: relative;
